Fix issue with background image not covering. Fix sidenav overlay height. Style sidenav. Remove skew from navbar

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2,7 +2,7 @@
 
 header {
     position: relative;
-    height: 6.25rem;
+  /*  height: 6.25rem; */
     overflow: hidden;
     z-index: 2;
 }
@@ -22,7 +22,7 @@ nav {
 nav .brand-logo {
     color: #420420;
     padding-left: 10px;
-    padding-top: 10px;
+  /*  padding-top: 10px; */
     font-family: 'Tangerine', cursive;
     font-weight: 700;
     font-size: 3.125rem;
@@ -48,15 +48,36 @@ nav a {
     right: 0;
     width: 100%;
     height: 100%;
-    transform: skewY(-2deg);
+  /*  transform: skewY(-2deg);
     transform-origin: top left;
     content: '';
-    background-image: linear-gradient(rgba(250, 250, 237, 0.9), rgba(251,251,240, 0.7));
+    background-image: linear-gradient(rgba(250, 250, 237, 0.9), rgba(251,251,240, 0.7)); */
+    background-color: #fafaed;
 }
 
 .sub-logo {
     font-size: 1.5rem;
     font-weight: 700;
+}
+
+.sidenav {
+    background-color: #fafaed;
+}
+
+.sidenav-title {
+    margin-top: 7px;
+    margin-left: 7px;
+    font-family: 'Tangerine', cursive;
+    font-weight: 600;
+    font-size: 3.5rem;
+}
+
+.sidenav-overlay {
+    height: 0;
+}
+
+.sidenav li a {
+    color: #420420;
 }
 
 /* Search Bar */
@@ -65,6 +86,7 @@ nav a {
   padding: 6px;
   border-radius: 5px;
   border: none;
+  margin-top: 2rem;
   
 }
 
@@ -177,15 +199,16 @@ form.search-bar::after {
   -o-background-size: cover;
   background-size: cover;
   top: 0;  
-  bottom: 0;
+  bottom: 0; 
   left: 0;
   right: 0;
-  width: 100%; 
-  height: 100%;
-  position: absolute;
+  min-width: 100vw; 
+  min-height: 100vh; 
+  position: relative; 
   content: ''; 
-  z-index: -1;
-  margin-bottom:0 0 30px 0;
+  /*  z-index: -1;
+  margin-bottom:0 0 30px 0; */
+  background-attachment: fixed;
 }
 
 /* Footer */
@@ -399,7 +422,7 @@ textarea {
 /* Reviews */
 
 .reviews {
-    width: 40%;
+    width: 50%;
     margin: auto;
     background-color: rgba(250, 250, 237, 0.7);
     border-radius: 3px;
